# plagiarism-checker

./: .gitignore  README.md  opening_section.md  output.txt  possible-workflow.md  pyproject.toml  run-tracer.txt  test-input.txt  test-regex-doc.txt  test.py  test_tokenizer.py  todo.md  use-of-LLM.md  vector_builder.py
docs/: 1.txt  2.txt  3.txt  epiktet-frihet.txt  epikur-brev.txt  skam.txt  test-input.txt
src/: doc_chunk.py  main.py  plagiarism-system.py  plagiarism_system.py
src/plagiarism_checker/: doc_chunk.py  main.py  plagiarism_system.py
src/plagiarism_checker/utils/: cosine_similarity.py  document_chuncker.py  file_to_str.py  regex_find_all_words.py  vector_builder.py
src/utils/: document_chuncker.py  dotproduct.py  length_normalization.py  regex_find_all_words.py  vector_builder.py
test_input/: test-input2.txt  testinput3.txt
utils/: cosine_similarity.py  document-chuncker.py
